<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/shades"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="25sp" />




    </RelativeLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txt_h1"
        android:background="@color/grayish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/help1"
        android:textAlignment="center"
        android:textColor="@color/brick"
        android:textSize="21sp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txt_h2"
        android:background="@color/grayish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/help2"
        android:textAlignment="center"
        android:textColor="@color/brick"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/txt_h3"
        android:background="@color/grayish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/help3"
        android:textAlignment="center"
        android:textColor="@color/brick"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        />






</LinearLayout>